deploy/k8s/build/namespace.yaml
apiVersion: v1
kind: Namespace                                          
metadata:
  name: kodeploy-build
  labels:
    managed-by: kodeploy
